<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:key="@string/pref_screen">
    <PreferenceCategory
        android:enabled="true"
        android:key="@string/pref_key_user_info"
        android:title="@string/pref_category_user_info">
        <EditTextPreference
            android:persistent="true"
            android:key="@string/pref_key_device_name"
            android:title="@string/pref_title_device_name" />
        <EditTextPreference
            android:persistent="true"
            android:key="@string/pref_key_email_address"
            android:title="@string/pref_title_email_address"/>
        <EditTextPreference
            android:persistent="true"
            android:key="@string/pref_key_sms_address"
            android:title="@string/pref_title_sms_address"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:enabled="false"
        android:key="@string/pref_category_key_camera"
        android:summary="@string/pref_summary_camera_tips"
        android:title="@string/pref_category_title_camera"
        app:isPreferenceVisible="true">

        <ListPreference
            android:key="@string/pref_key_camerax_rear_target_resolution"
            android:persistent="true"
            android:title="@string/pref_title_camerax_rear_camera_target_resolution" />

        <ListPreference
            android:key="@string/pref_key_camerax_front_target_resolution"
            android:persistent="true"
            android:title="@string/pref_title_camerax_front_camera_target_resolution" />

    </PreferenceCategory>

    <PreferenceCategory
        android:summary="@string/pref_category_info_summary"
        android:title="@string/pref_category_info">
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/pref_key_info_hide"
            android:persistent="true"
            android:title="@string/pref_title_info_hide" />
    </PreferenceCategory>

    <PreferenceCategory
        android:summary="@string/pref_category_pose_detection_summary"
        android:title="@string/pref_category_pose_detection">
        <ListPreference
            android:defaultValue="@string/pref_entry_values_pose_detector_performance_mode_fast"
            android:entries="@array/pref_entries_values_pose_detector_performance_mode"
            android:entryValues="@array/pref_entry_values_pose_detector_performance_mode"
            android:key="@string/pref_key_performance_mode"
            android:persistent="true"
            android:summary="%s"
            android:title="@string/pref_title_pose_detector_performance_mode" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/pref_key_prefer_gpu"
            android:persistent="true"
            android:summary="@string/pref_summary_pose_detector_prefer_gpu"
            android:title="@string/pref_title_pose_detector_prefer_gpu" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/pref_key_show_in_frame_likelihood"
            android:persistent="true"
            android:title="@string/pref_title_pose_detector_show_in_frame_likelihood" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/pref_key_visualize_z"
            android:persistent="true"
            android:title="@string/pref_title_pose_detector_visualize_z" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/pref_key_rescale_z"
            android:persistent="true"
            android:title="@string/pref_title_pose_detector_rescale_z" />
    </PreferenceCategory>

</PreferenceScreen>
